--- a/mypy/mypy.ini
+++ b/mypy/mypy.ini
@@ -1,9 +1,18 @@
 [mypy]
 
+[mypy-filelock.*]
+ignore_missing_imports = True
+
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
+[mypy-mpi4py.*]
+ignore_missing_imports = True
+
 [mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
 ignore_missing_imports = True
 
 [mypy-pytest.*]
