--- a/mypy/mypy.ini
+++ b/mypy/mypy.ini
@@ -12,6 +12,9 @@ ignore_missing_imports = True
 [mypy-scipy.*]
 ignore_missing_imports = True
 
+[mypy-sklearn.*]
+ignore_missing_imports = True
+
 [mypy-pandas.*]
 ignore_missing_imports = True
 
